# CPP-Virtual-World

./: CMakeLists.txt  Plansza.cpp  Plansza.h  Punkt.cpp  Punkt.h  Swiat.cpp  Swiat.h  main.cpp
Organizmy/: Organizm.cpp  Organizm.h  Roslina.cpp  Roslina.h  Zwierze.cpp  Zwierze.h
Organizmy/Rosliny/: BarszczSosnowskiego.cpp  BarszczSosnowskiego.h  Guarana.cpp  Guarana.h  Mlecz.cpp  Mlecz.h  Trawa.cpp  Trawa.h  WilczeJagody.cpp  WilczeJagody.h  trawa.cpp  trawa.h
Organizmy/Zwierzeta/: Antylopa.cpp  Antylopa.h  Czlowiek.cpp  Czlowiek.h  Lis.cpp  Lis.h  Owca.cpp  Owca.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h
