cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp Organizmy/Organizm.cpp Organizmy/Organizm.h Plansza.cpp Plansza.h Punkt.cpp Punkt.h Organizmy/Roslina.cpp Organizmy/Roslina.h Swiat.cpp Swiat.h Organizmy/Zwierze.cpp Organizmy/Zwierze.h Organizmy/Zwierzeta/Wilk.cpp Organizmy/Zwierzeta/Wilk.h Organizmy/Zwierzeta/Owca.cpp Organizmy/Zwierzeta/Owca.h Organizmy/Rosliny/trawa.cpp Organizmy/Rosliny/trawa.h)
