cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp Organizmy/Organizm.cpp Organizmy/Organizm.h Plansza.cpp Plansza.h Punkt.cpp Punkt.h Organizmy/Roslina.cpp Organizmy/Roslina.h Swiat.cpp Swiat.h Organizmy/Zwierze.cpp Organizmy/Zwierze.h Organizmy/Zwierzeta/Wilk.cpp Organizmy/Zwierzeta/Wilk.h Organizmy/Zwierzeta/Owca.cpp Organizmy/Zwierzeta/Owca.h Organizmy/Rosliny/Trawa.cpp Organizmy/Rosliny/Trawa.h Organizmy/Rosliny/Mlecz.cpp Organizmy/Rosliny/Mlecz.h Organizmy/Rosliny/Guarana.cpp Organizmy/Rosliny/Guarana.h Organizmy/Rosliny/WilczeJagody.cpp Organizmy/Rosliny/WilczeJagody.h Organizmy/Rosliny/BarszczSosnowskiego.cpp Organizmy/Rosliny/BarszczSosnowskiego.h Organizmy/Zwierzeta/Lis.cpp Organizmy/Zwierzeta/Lis.h Organizmy/Zwierzeta/Zolw.cpp Organizmy/Zwierzeta/Zolw.h Organizmy/Zwierzeta/Antylopa.cpp Organizmy/Zwierzeta/Antylopa.h Organizmy/Zwierzeta/Czlowiek.cpp Organizmy/Zwierzeta/Czlowiek.h)
